kyverno-policies/mirantis-kyverno-policies/kyverno-visa-pulse-psp/kyverno-visa-pulse-psp.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: visa-pulse-psp
  annotations:
    policies.kyverno.io/title: visa-pulse
    policies.kyverno.io/category: Visa-Custom
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.9.2
    kyverno.io/kubernetes-version: "1.23-1.26"
    policies.kyverno.io/description: >-
      Visa pulse Policy - privileged      
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: securityContext-hostlevelvalidation
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: >-
          Policy for visa pulse Access.        
        pattern:
          spec:            
            securityContext:
              runAsUser: "*"
              fsGroup: "*"
              supplementalGroups: "*"  
            =(ephemeralContainers):          
              securityContext:
                allowPrivilegeEscalation: true
                privileged: true
                capabilities:
                  drop:
                    - MKNOD
                  add:
                    - SETPCAP
                    - AUDIT_WRITE
                    - CHOWN
                    - NET_RAW
                    - DAC_OVERRIDE
                    - FOWNER
                    - FSETID
                    - KILL
                    - SETUID
                    - SETGID
                    - NET_BIND_SERVICE
                    - SYS_CHROOT
                    - SETFCAP
                seLinuxOptions:
                  level: "?*"
            =(initContainers):          
              securityContext:
                allowPrivilegeEscalation: true
                privileged: true
                capabilities:
                  drop:
                    - MKNOD
                  add:
                    - SETPCAP
                    - AUDIT_WRITE
                    - CHOWN
                    - NET_RAW
                    - DAC_OVERRIDE
                    - FOWNER
                    - FSETID
                    - KILL
                    - SETUID
                    - SETGID
                    - NET_BIND_SERVICE
                    - SYS_CHROOT
                    - SETFCAP
                seLinuxOptions:
                  level: "?*"
            containers:          
            - securityContext:
                allowPrivilegeEscalation: true
                privileged: true
                capabilities:
                  drop:
                    - MKNOD
                  add:
                    - SETPCAP
                    - AUDIT_WRITE
                    - CHOWN
                    - NET_RAW
                    - DAC_OVERRIDE
                    - FOWNER
                    - FSETID
                    - KILL
                    - SETUID
                    - SETGID
                    - NET_BIND_SERVICE
                    - SYS_CHROOT
                    - SETFCAP
                seLinuxOptions:
                  level: "?*"
